<?xml version="1.0"?>
<package>
  <name>pcl_binvox</name>
  <version>0.0.1</version>
  <description>pcl_binvox</description>

  <maintainer email="dbworth@cmu.edu">David Butterworth</maintainer>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>libpcl-all-dev</build_depend>

  <run_depend>libpcl-all</run_depend>
</package>
